--- a/client/src/app/pages/home/components/produto/produto.component.html
+++ b/client/src/app/pages/home/components/produto/produto.component.html
@@ -13,7 +13,7 @@
     <dd>
       <ul>
         <li *ngFor="let loja of produto.lojas">
-          <a [href]="loja.url">{{loja.nome}}</a>
+          <a [href]="loja.url" target="_blank">{{loja.nome}}</a>
         </li>
       </ul>
     </dd>
