Ajustes de CSS geral e listagem

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header class="jumbotron">
   <h1>Chá de bebe da Yasmin</h1>
-  <h2>& da Vanessa e do Aarão :)</h2>
+  <h2>& da Vanessa e do Aarão ☺</h2>
 </header>
 <main class="container">
   <router-outlet></router-outlet>
