Iniciado tela de login e cadastro

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,8 @@
 <header class="jumbotron">
-  <h1>Chá de bebe da Yasmin</h1>
-  <h2>& da Vanessa e do Aarão ☺</h2>
+ <div class="container">
+  <h1>Chá da bebê Yasmin</h1>
+  <h2>& da Vanessa e do Aarão 😄</h2>
+ </div>
 </header>
 <main class="container">
   <router-outlet></router-outlet>
