--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,9 @@
-<header class="jumbotron">
- <div class="container">
-  <h1>Chá da bebê Yasmin</h1>
-  <h2>& da Vanessa e do Aarão 😄</h2>
- </div>
+<header class="jumbotron" [ngClass]="{'temMenu': isLoggedIn()}">
+  <div class="container">
+    <h1>Chá da bebê Yasmin</h1>
+    <h2>& da Vanessa e do Aarão 😄</h2>
+    <bt-my-list *ngIf="isLoggedIn()"></bt-my-list>
+  </div>
 </header>
 <main class="container">
   <router-outlet></router-outlet>
