--- a/client/src/app/pages/home/product-list.component.html
+++ b/client/src/app/pages/home/product-list.component.html
@@ -11,12 +11,10 @@
     <ol>
       <li *ngFor="let produto of listaProdutos">
         <bt-produto 
-          [produto]="produto"
+        [produto]="produto"
+        (enviaProduto)="toggleProdutoNaMinhaLista($event, produto)"
           ></bt-produto>
       </li>
     </ol>
   </section>
 </div>
-
-
-<!-- muitas pessoas consideram sucesso quando uma pessoa que obteve uma grande parcela dos recursos do mundo para si, enquanto milhares de pessoas passam fome. -->
