--- a/client/src/app/pages/welcome/welcome.component.scss
+++ b/client/src/app/pages/welcome/welcome.component.scss
@@ -10,3 +10,10 @@
   text-align: justify;
   text-indent: 2em;;
 }
+
+.alert ul {
+  color: red !important;
+  list-style-position: inside;
+  margin: 0;
+  padding: 0;
+} 
