--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,7 +2,10 @@
   <div class="container">
     <h1>Chá da bebê Yasmin</h1>
     <h2>& da Vanessa e do Aarão 😄</h2>
-    <bt-my-list *ngIf="isLoggedIn()"></bt-my-list>
+    <nav *ngIf="isLoggedIn()">
+      <button (click)="sair()">Sair/Logout</button>
+      <bt-my-list></bt-my-list>
+    </nav>
   </div>
 </header>
 <main class="container">
