--- a/client/src/app/pages/welcome/welcome.component.html
+++ b/client/src/app/pages/welcome/welcome.component.html
@@ -2,7 +2,7 @@
   <form class="needs-validation col-sm-5" [formGroup]="formLogin" (ngSubmit)="entrar()">
     <h2>Entrar</h2>
 
-    <div *ngIf="loginAlert.length > 0" class="alert alert-danger" role="alert">
+    <div *ngIf="loginAlert" class="alert alert-danger" role="alert">
       <ul>
         <li *ngFor="let msg of cadastroAlert">
           {{msg}}
