--- a/client/src/app/pages/welcome/welcome.component.html
+++ b/client/src/app/pages/welcome/welcome.component.html
@@ -39,7 +39,7 @@
   <form class="needs-validation col-sm-6" [formGroup]="formCadastro"  (ngSubmit)="cadastrar()">
     <h2>Cadastrar</h2>
 
-    <div *ngIf="cadastroAlert.length > 0" class="alert alert-danger" role="alert">
+    <div *ngIf="cadastroAlert" class="alert alert-danger" role="alert">
       <ul>
         <li *ngFor="let msg of cadastroAlert">
           {{msg}}
