Ajustes na exposicao das propriedades da entidade user

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -8,6 +8,6 @@
     </nav>
   </div>
 </header>
-<main class="container">
+<main class="container mb-4">
   <router-outlet></router-outlet>
 </main>
