--- a/client/src/app/pages/home/components/produto/produto.component.html
+++ b/client/src/app/pages/home/components/produto/produto.component.html
@@ -33,16 +33,21 @@
     <dd>{{produto.descricao}}</dd>
   </dl>
   <section class="reserva">
-    <button *ngIf="produto.status == statusProduto.livre" class="btn btn-success btn-lg" (click)="togglePresentear()">
-      Presentear!
-    </button>
 
-    <button *ngIf="produto.status == statusProduto.reservado" class="btn btn-danger btn-lg" (click)="togglePresentear()">
-      Reservado para: {{produto.user.nome}}
-    </button>
-
-    <button *ngIf="produto.status == statusProduto.ilimitado" class="btn btn-primary btn-lg" (click)="togglePresentear()">
-      Presentear!
+    <button 
+      class="btn btn-lg"
+      [ngClass]="{
+        'btn-success btn-lg': produto.status == statusProduto.livre,
+        'btn-primary btn-lg': produto.status == statusProduto.ilimitado,
+        'btn-secondary btn-sm': produto.status == statusProduto.reservado
+      }"  
+      (click)="togglePresentear()"
+    >
+      {{
+        produto.status == statusProduto.livre
+        ? "Presentear!"
+        : "Reservado para: "+produto.user?.nome
+      }}
     </button>
 
   </section>
