Feito mensagem em caso de produto reservado para outros user

--- a/client/src/app/pages/home/components/produto/produto.component.html
+++ b/client/src/app/pages/home/components/produto/produto.component.html
@@ -34,6 +34,15 @@
   </dl>
   <section class="reserva">
 
+    <div class="popover fade bs-popover-top"
+    [ngClass]="{'show': mensagemErro}"
+    role="tooltip" (click)="closePopover()">
+      <div class="arrow"></div>
+      <div class="popover-body">
+        {{mensagemErro}}
+      </div>
+    </div>
+
     <button 
       class="btn btn-lg"
       [ngClass]="{
