--- a/client/src/app/components/my-list/my-list.component.scss
+++ b/client/src/app/components/my-list/my-list.component.scss
@@ -23,6 +23,7 @@
   button {
     border: none;
     background-color: white;
+    color: var(--gray);
     cursor: pointer;
     padding: 10px 20px;
     text-align: center;
