--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,7 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
+
 $base-lila: #CFB4ED;
 
-* {
+body {
   color: var(--gray);
 }
 
