--- a/client/src/app/components/my-list/my-list.component.html
+++ b/client/src/app/components/my-list/my-list.component.html
@@ -25,7 +25,7 @@
 
     <div *ngIf="products.length == 0">
       <p>
-        Você ainda não reservou um presente! 
+        Olá {{userName}}! Você ainda não reservou um presente! 
       </p>
       <p>
         Confira a lista de presentes, fechando esta janela, e depois deslizando a tela para baixo.
