--- a/client/src/app/pages/home/components/produto/produto.component.html
+++ b/client/src/app/pages/home/components/produto/produto.component.html
@@ -29,8 +29,10 @@
         </li>
       </ul>
     </dd>
-    <dt>Comentário:</dt>
-    <dd>{{produto.descricao}}</dd>
+    <ng-template *ngIf="produto.descricao">
+       <dt>Comentário:</dt>
+       <dd>{{produto.descricao}}</dd>
+    </ng-template>
   </dl>
   <section class="reserva">
 
