--- a/client/src/app/components/my-list/my-list.component.scss
+++ b/client/src/app/components/my-list/my-list.component.scss
@@ -1,4 +1,5 @@
 .my-list {
+  color: var(--gray);
   bottom: -5px;
   left: 0;
   position: absolute;
@@ -138,6 +139,7 @@
     display: inline-block;
     max-width: calc(100% - 30px);
     padding: 2px 8px;
+    vertical-align: top;
 
     &:hover {
       background-color: powderblue;
