melhorias na exigencia de token e token service

--- a/client/src/app/pages/faq/faq.component.html
+++ b/client/src/app/pages/faq/faq.component.html
@@ -1,4 +1,7 @@
-<article>
+<article class="mb-4">
 <h2>Informações</h2>
 {{content}}
 </article>
+<nav>
+  <a [routerLink]="['']" class="btn btn-outline-primary">Voltar à lista de presentes</a>
+</nav>
