--- a/client/src/app/pages/welcome/welcome.component.html
+++ b/client/src/app/pages/welcome/welcome.component.html
@@ -129,7 +129,7 @@
         <div class="small">
           <h5>Termos de uso e política de privacidade e dados</h5>
           <p>
-            Este sistema foi carinhosamente desenvolvido por Vanessa Martinez Tonini e feito exclusivamente para familiares e amigas/os, não compartilhe abertamente este site. Seu nome aparecerá para os outros usuários do sistema caso reservar um presente. Seus dados serão utilizados para uso exclusivo deste site. Após a data de nascimento, este sistema será retirado e todos os dados serão descartados.
+            Este sistema foi carinhosamente desenvolvido por Vanessa Martinez Tonini e Aarão Melo Lopes, e feito exclusivamente para familiares e amigas/os, não compartilhe abertamente este site. Seu nome aparecerá para os outros usuários do sistema caso reservar um presente. Seus dados serão utilizados para uso exclusivo deste site. Após a data de nascimento, este sistema será retirado e todos os dados serão descartados.
           </p>
         </div>
         <div class="form-check">
